fixed issue with price/table problem on mobile

--- a/app/assets/stylesheets/groups.css
+++ b/app/assets/stylesheets/groups.css
@@ -9,6 +9,5 @@
 }
 
 .purchase-button {
-  display: flex!important;
   justify-content: center;
 }
